ghcjs: Add FromJSVal and ToJSVal

--- a/aeson.cabal
+++ b/aeson.cabal
@@ -168,6 +168,8 @@ library
     ghc-options: -O2
 
   include-dirs: include
+  if impl(ghcjs)
+    build-depends: ghcjs-base, transformers
   if impl(ghcjs) || !flag(cffi)
     hs-source-dirs: pure
     other-modules: Data.Aeson.Parser.UnescapePure
@@ -204,13 +206,13 @@ test-suite tests
     UnitTests.NullaryConstructors
 
   build-depends:
-    QuickCheck >= 2.10.0.1 && < 2.12,
+    QuickCheck >= 2.10.0.1 && < 2.13,
     aeson,
     integer-logarithms >= 1 && <1.1,
     attoparsec,
     base,
     base-compat,
-    base-orphans >= 0.5.3 && <0.8,
+    base-orphans >= 0.5.3 && <0.9,
     base16-bytestring,
     containers,
     directory,
